--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     </style>
 </head>
 <body>
-<div class="imgbox">
+    <title>plant</title>
+    <div class="imgbox">
     <img class="center-fit" src='./images/plant.JPG'>
 </div>
 </body>
