--- a/plants/mrsplant.html
+++ b/plants/mrsplant.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
-    <title>mr. plant</title>
+    <link rel="stylesheet" href="../styles.css">
+    <title>mrs. plant</title>
 </head>
 <body>
     <div class="imgbox">
-    <img class="center-fit" src='./images/plant.JPG'>
+    <img class="center-fit" src='../images/mrsplant.JPG'>
 </div>
-<a href="./plants/mrsplant.html">Mrs. Plant</a>
+<a href="../index.html">Home</a>
 </body>
 </html>
