cuties, squidy, royjiebiv

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <span>
     <a href="./plants/mrsplant.html">Mrs. Plant</a>
     <a href="./plants/mushy.html">Mushy</a>
+    <a href="./plants/cuties.html">Cuties</a>
+    <a href="./plants/squidy.html">Squidy</a>
+    <a href="./plants/royjiebiv.html">Royjiebiv</a>
 </span>
 </body>
 </html>
